src/objects/booking__BBBookings__c.object
<CustomObject>
    <fields>
        <fullName>booking__Attended__c</fullName>
        <label>Attended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Id__c</fullName>
        <externalId>true</externalId>
        <label>BookingBug ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>booking__Cancellation_date__c</fullName>
        <label>Cancellation_date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Company_id__c</fullName>
        <label>Company_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Coupon_code__c</fullName>
        <label>Coupon_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Created_at__c</fullName>
        <label>Created at</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Day_of_week__c</fullName>
        <label>Day_of_week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Feedback__c</fullName>
        <label>Feedback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Just_date__c</fullName>
        <label>Just_date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Just_time__c</fullName>
        <label>Just_time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Late_cancel__c</fullName>
        <label>Late_cancel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Member_id__c</fullName>
        <label>Member_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__Paid__c</fullName>
        <label>Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Person_id__c</fullName>
        <label>Person_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Pretty_print_multi_status__c</fullName>
        <label>Pretty_print_multi_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Price__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Purchase_ID__c</fullName>
        <label>Purchase ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Purchase_item_id__c</fullName>
        <label>Purchase_item_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__Readable_current_multi_stat__c</fullName>
        <label>Readable_current_multi_stat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Repeat_booking_id__c</fullName>
        <label>Repeat_booking_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Resource_id__c</fullName>
        <label>Resource_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__SF_reference__c</fullName>
        <label>SF reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__S_status__c</fullName>
        <label>S_status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Session_ID__c</fullName>
        <label>Session ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Session__c</fullName>
        <label>Session</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Slot_ID__c</fullName>
        <label>Slot ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__long_id__c</fullName>
        <label>long_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__service_id__c</fullName>
        <label>Service_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__settings__c</fullName>
        <label>Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BBBooking</label>
    <listViews>
        <fullName>booking__All</fullName>
        <columns>booking__BookingBug_Id__c</columns>
        <columns>NAME</columns>
        <columns>booking__Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>booking__By_Name</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>booking__BookingBug_Id__c</columns>
        <columns>booking__Just_time__c</columns>
        <filterScope>Everything</filterScope>
        <label>By Name</label>
    </listViews>
    <nameField>
        <label>BBBookings Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBBookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>